# Character-cultivation

./: README.md  ai-dev-rules.md  ai-task-breakdown.md  api-specification.md  knowledge-base-guide.md  mvp-development-plan.md  plugin-dev-guide.md  project-architecture.md
knowledge_base/characters/: identities.md  npcs.md
knowledge_base/cultivation/: methods.md  stages.md
knowledge_base/world/: factions.md  geography.md
plugins/: __init__.py  basic_cultivation.py
xiuxian-game/: .env  README.md  pyproject.toml
xiuxian-game/app/: main.py
xiuxian-game/app/api/: __init__.py  deps.py
xiuxian-game/app/api/v1/: __init__.py
xiuxian-game/app/api/v1/endpoints/: auth.py  characters.py  game.py
xiuxian-game/app/core/: config.py  plugin_system.py  rag_system.py  security.py
xiuxian-game/app/crud/: __init__.py  crud_character.py  crud_game.py  crud_user.py
xiuxian-game/app/db/: __init__.py  session.py
xiuxian-game/app/models/: __init__.py  base.py  character_models.py  game_models.py  user_models.py
xiuxian-game/app/schemas/: __init__.py  base_schemas.py  character_schemas.py  game_schemas.py  token_schemas.py  user_schemas.py
