[tool.poetry]
name = "xiuxian-game"
version = "0.1.0"
description = "A text-based cultivation RPG"
authors = ["AI Developer <ai@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
sqlalchemy = "^2.0.41"
pydantic = "^2.11.7"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-multipart = "^0.0.20"
alembic = "^1.16.2"
langchain = "^0.3.25"
openai = "^1.88.0"
faiss-cpu = "^1.11.0"
psycopg2-binary = "^2.9.10"
pydantic-settings = "^2.9.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
